Домашка по DRF CELERY добавил в периодические задачи отправкау запроса для получения статуса платежа

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,13 @@
 # Django
 DEBUG
 BASE_URL
+SECRET_KEY
 
 # Emails for yandex!
 EMAIL_HOST_USER
 EMAIL_HOST_PASSWORD
 
-
+# Tinkoff
 TERMINAL_KEY
+PASSWORD_TERMINAL
 
-SECRET_KEY
